--- a/popup.html
+++ b/popup.html
@@ -14,27 +14,22 @@
 
 		<input type="text" id="autocomplete" placeholder="Type a feature, like text-shadow, border image, etc" autofocus="autofocus">
 			
-		<div id="featureSupport">
-			<h1 id="title"></h1>
-			<a id="moreInfo" href="#" target="_blank" style="display: none;">More info on caniuse.com</a>
-			<div id="browserSupport"></div>
+		<div id="featureSupport" class="cf">
+			<a id="moreInfo" class="more-info" href="#" target="_blank" style="display: none;">More info on caniuse.com</a>
+			<div id="browserSupport" class="browser-support cf" style="display:none;"></div>
 		</div>
 		
-		<div id="references">
-
-			<h2>References: </h2>
-
-			<ul id="references">
-				<li class="y">Supported</li>
-				<li class="a">Partial support</li>
-				<li class="n">No support</li>
-				<li class="u">Unknown</li>
-			</ul>
-		
-		</div>
+		<ul id="references" class="references cf" style="display:none;">
+			<li class="y">Supported</li>
+			<li class="a">Partial support</li>
+			<li class="n">No support</li>
+			<li class="u">Unknown</li>
+		</ul>
 		
 	</div>			
 
+
+	<p id="resources" style="display:none;"><a href="http://marinad.com.ar/free-flat-browser-logotypes/" target="_blank">Flat browser logos</a> by Marina D.</p>
 	<p>Powered by <a href="http://caniuse.com" target="_blank">caniuse.com</a> - <a href="https://github.com/marcelomazza/caniuse-chrome-extension" target="_blank">Source code</a> on Github</p>
 		
 	<script type="text/javascript" src="js/jquery.min.js"></script>
