Hide about info

--- a/popup.html
+++ b/popup.html
@@ -26,11 +26,29 @@
       <li class="u">Unknown</li>
     </ul>
 
+    <p>
+      <img id="aboutIcon" class="about-icon" src="img/Infobox_info_icon.svg" alt="Info">
+    </p>
+
+    <div id="about" class="about" style="display: none;">
+      <p id="resources">
+        <a href="http://marinad.com.ar/free-flat-browser-logotypes/" target="_blank">
+          Flat browser logos
+        </a>
+        by Marina D.
+      </p>
+      <p>
+        Powered by <a href="http://caniuse.com" target="_blank">caniuse.com</a> -
+        <a href="https://github.com/marcelomazza/caniuse-chrome-extension" target="_blank">
+          Source code
+        </a>
+        on Github
+      </p>
+    </div>
+
   </div>
 
 
-  <p id="resources" class="js-toggle" style="display:none;"><a href="http://marinad.com.ar/free-flat-browser-logotypes/" target="_blank">Flat browser logos</a> by Marina D.</p>
-  <p>Powered by <a href="http://caniuse.com" target="_blank">caniuse.com</a> - <a href="https://github.com/marcelomazza/caniuse-chrome-extension" target="_blank">Source code</a> on Github</p>
 
   <script type="text/javascript" src="js/jquery.min.js"></script>
   <script type="text/javascript" src="js/jquery-ui-1.8.24.custom.min.js"></script>
