Design and CSS improvements

--- a/popup.html
+++ b/popup.html
@@ -31,6 +31,13 @@
     </p>
 
     <div id="about" class="about" style="display: none;">
+      <p>
+        Powered by <a href="http://caniuse.com" target="_blank">caniuse.com</a> -
+        <a href="https://github.com/marcelomazza/caniuse-chrome-extension" target="_blank">
+          Source code
+        </a>
+        on Github
+      </p>
       <p id="resources">
         <a href="http://marinad.com.ar/free-flat-browser-logotypes/" target="_blank">
           Flat browser logos
@@ -38,11 +45,10 @@
         by Marina D.
       </p>
       <p>
-        Powered by <a href="http://caniuse.com" target="_blank">caniuse.com</a> -
-        <a href="https://github.com/marcelomazza/caniuse-chrome-extension" target="_blank">
-          Source code
+        <a href="https://commons.wikimedia.org/wiki/File:Infobox_info_icon.svg" target="_blank">
+          Info icon
         </a>
-        on Github
+        from Wikimedia.
       </p>
     </div>
 
