Use svg files for browser icons

--- a/popup.html
+++ b/popup.html
@@ -46,7 +46,11 @@
       </p>
       <p>
         <a href="https://commons.wikimedia.org/wiki/File:Infobox_info_icon.svg" target="_blank">
-          Info icon
+          Infobox_info_icon.svg
+        </a>
+        and
+        <a href="https://commons.wikimedia.org/wiki/File:Android_robot.svg" target="_blank">
+          Android_robot.svg
         </a>
         from Wikimedia.
       </p>
