--- a/popup.html
+++ b/popup.html
@@ -14,12 +14,12 @@
 
     <input type="text" id="autocomplete" placeholder="Type a feature, like text-shadow, border image, etc" autofocus="autofocus">
 
-    <div id="featureSupport" class="cf">
+    <div class="cf">
       <a id="moreInfo" class="more-info js-toggle" href="#" target="_blank" style="display: none;">More info on caniuse.com</a>
       <div id="browserSupport" class="browser-support cf js-toggle"></div>
     </div>
 
-    <ul id="references" class="references cf js-toggle" style="display:none;">
+    <ul class="references cf js-toggle" style="display:none;">
       <li class="y">Supported</li>
       <li class="a">Partial support</li>
       <li class="n">No support</li>
@@ -58,13 +58,10 @@
 
   </div>
 
-
-
   <script type="text/javascript" src="js/jquery.min.js"></script>
   <script type="text/javascript" src="js/jquery-ui-1.8.24.custom.min.js"></script>
 
   <script type="text/javascript" src="popup.js"></script>
-
 
 </body>
 </html>
