--- a/popup.html
+++ b/popup.html
@@ -16,7 +16,7 @@
 
     <div class="cf">
       <a id="moreInfo" class="more-info js-toggle" href="#" target="_blank" style="display: none;">More info on caniuse.com</a>
-      <div id="browserSupport" class="browser-support cf js-toggle"></div>
+      <div id="browserSupport" class="browser-support cf js-toggle" style="display: none;"></div>
     </div>
 
     <ul class="references cf js-toggle" style="display:none;">
@@ -26,9 +26,7 @@
       <li class="u">Unknown</li>
     </ul>
 
-    <p>
-      <img id="aboutIcon" class="about-icon" src="img/Infobox_info_icon.svg" alt="Info">
-    </p>
+    <img id="aboutIcon" class="about-icon" src="img/Infobox_info_icon.svg" alt="Info">
 
     <div id="about" class="about" style="display: none;">
       <p>
